# AI-micro-project-generator

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER.md  LICENCE  Makefile  README.md  artifacts.json  demo_db.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  parser.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
aipg/: __init__.py  api.py  assistant.py  constants.py  domain.py  exceptions.py  llm.py  main.py  server.py  state.py  task.py
aipg/cache/: cache.db
aipg/configs/: app_config.py  default.yaml  default.yaml.example  loader.py  overrides.py
aipg/prompting/: __init__.py  bug_fixer.md  define_topics.md  feedback.md  project_corrector.md  project_gen.md  project_generator.md  project_validator.md  prompt_generator.py  utils.py
aipg/prompting/prompts/: bug_fixer.md  feedback.md  llm_ranker.md  project_corrector.md  project_validator.md
aipg/rag/: __init__.py  adapters.py  integration.py  ports.py  rag_builder.py  service.py
aipg/sandbox/: __init__.py  adapters.py  builder.py  domain.py  ports.py  service.py
aipg/task_inference/: __init__.py  task_inference.py
aipg/tracing/: __init__.py  langfuse_tracer.py
config/: db_config.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.sandbox  nginx.conf
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/generate/: route.ts
frontend/app/api/health/: route.ts
frontend/app/presentation/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/components/chat/: MessageBubble.tsx
frontend/components/marketing/: NewsletterSignup.tsx
frontend/components/ui/: button.tsx  input.tsx  textarea.tsx
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CodeEditor.tsx  MarkdownRenderer.tsx  SuccessCelebration.tsx
frontend/src/pages/: ProjectDetailPage.tsx  ProjectsPage.tsx
frontend/src/services/: api.ts
frontend/styles/: globals.css
model/: models.py
rag/: adapters.py  ports.py  service.py
repo/: abstract_repos.py  sqlalchemy_repos.py
src/sandbox/: domain.py  use_cases.py
src/sandbox/adapters/: docker_saver.py
tests/: README.md  test_assistant_integration.py  test_extract_code_block.py  test_extract_expected_output.py  test_parse_define_topics.py  test_parse_markdown_headers.py  test_parse_project_markdown.py  test_rag_service.py  test_save_python_sandbox.py
tests/prompting/: test_bug_fixer_prompt_generator.py  test_llm_ranker_prompt_generator.py
tests/rag/: test_rag_service.py
tests/sandbox/: test_preinstalled_libraries.py  test_python_sandbox_integration.py  test_python_sandbox_service.py  test_sandbox_builder.py
tests/task_inference/: test_llm_ranker_inference.py  test_project_validator_inference.py
tests/utils/: test_extract_expected_output.py  test_parse_define_topics.py  test_parse_llm_ranker_scores.py
